--- a/style.css
+++ b/style.css
@@ -107,8 +107,8 @@ body{
       position: relative;
   height: 100vh;
   min-height: 600px;
-  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/asset/perfect\ girl.jpg);
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/asset/perfect\ girl.jpg
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(asset/perfect\ girl.jpg);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(asset/perfect\ girl.jpg
   );
   background-size: cover;
   background-position: center;
