"Updated button styling, added mobile navigation functionality"

--- a/style.css
+++ b/style.css
@@ -214,3 +214,10 @@ body{
       background-attachment: fixed;
       color: black;
     }
+ 
+    .mobilenav{
+      display: block;
+      flex-direction: column;
+      background-color: black ;
+  
+     }
