--- a/style.css
+++ b/style.css
@@ -215,9 +215,19 @@ body{
       color: black;
     }
  
-    .mobilenav{
-      display: block;
-      flex-direction: column;
-      background-color: black ;
-  
+    @media (max-width: 768px) {
+
+      #navContent{
+         flex-direction: column;
+         position: absolute;
+         margin-top: -10px;
+         height: 50vh;
+         z-index: 5;
+         width: 100vw;
      }
+     #navContent button {
+      position: absolute;
+      bottom: 20px;
+     }      
+    }
+    
